Fixes: part of NB#255284 - MColorList contains wrong colors
RevBy: Holger Schröder, Adrian Yanes

--- a/base/meegotouch/libmeegotouchviews/style/mcolorliststyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mcolorliststyle.css
@@ -1,5 +1,6 @@
-MColorListStyle {
-    background-color : #000000;
+MColorListStyle.Landscape {
+    margin-left: 4.9mm;
+    margin-right: 4.9mm;
 }
 
 MColorList MButtonStyle#ColorSelectionButton.Landscape {
